--- a/src/BackwardsCompatibleFeatures/BackwardsCompatibleFeatures.csproj
+++ b/src/BackwardsCompatibleFeatures/BackwardsCompatibleFeatures.csproj
@@ -29,7 +29,7 @@
 		<PackageTags>records net5 isexternalinit backwards compatibility bcl record init</PackageTags>
 		<AssemblyVersion>$(Version)</AssemblyVersion>
 		<FileVersion>$(Version)</FileVersion>
-		<Version>2.0.0-preview2</Version>
+		<Version>2.0.0</Version>
 		<Copyright></Copyright>
 		<PackageIconUrl>https://raw.githubusercontent.com/CptWesley/BackwardsCompatibleRecords/master/logo.png</PackageIconUrl>
 		<PackageIcon>logo.png</PackageIcon>
