--- a/src/BackwardsCompatibleFeatures/BackwardsCompatibleFeatures.csproj
+++ b/src/BackwardsCompatibleFeatures/BackwardsCompatibleFeatures.csproj
@@ -2,16 +2,19 @@
 	<PropertyGroup>
 		<TargetFrameworks>
 			netstandard1.0;
+			netstandard1.3;
 			netstandard1.6;
 			netstandard2.0;
 			netstandard2.1;
+			net46;
 			net47;
 			net48;
 			netcoreapp1.0;
 			netcoreapp2.0;
 			netcoreapp3.0;
 			net5.0;
-			net6.0
+			net6.0;
+			net7.0
 		</TargetFrameworks>
 
 		<Nullable>enable</Nullable>
@@ -29,7 +32,7 @@
 		<PackageTags>records net5 isexternalinit backwards compatibility bcl record init</PackageTags>
 		<AssemblyVersion>$(Version)</AssemblyVersion>
 		<FileVersion>$(Version)</FileVersion>
-		<Version>2.0.0</Version>
+		<Version>2.1</Version>
 		<Copyright></Copyright>
 		<PackageIconUrl>https://raw.githubusercontent.com/CptWesley/BackwardsCompatibleRecords/master/logo.png</PackageIconUrl>
 		<PackageIcon>logo.png</PackageIcon>
