--- a/src/BackwardsCompatibleFeatures.Example/BackwardsCompatibleFeatures.Example.csproj
+++ b/src/BackwardsCompatibleFeatures.Example/BackwardsCompatibleFeatures.Example.csproj
@@ -8,7 +8,7 @@
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="BackwardsCompatibleFeatures" Version="2.0.0-preview2">
+		<PackageReference Include="BackwardsCompatibleFeatures" Version="2.1.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>compile</IncludeAssets>
 		</PackageReference>
